--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,23 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
 
+    <string name="point1">Начальная точка</string>
+    <string name="point2">Конечная точка</string>
+    <string-array name="day_of_week">
+        <item>Воскресенье</item>
+        <item>Понедельник</item>
+        <item>Вторник</item>
+        <item>Среда</item>
+        <item>Четверг</item>
+        <item>Пятница</item>
+        <item>Суббота</item>
+    </string-array>
+    <string name="km"> км</string>
+
+
+
+
+
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
