--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="app_style">Стиль приложения</string>
     <string name="btn_save">Сохранить и выйти</string>
+    <string name="title_activity_chat">ChatActivity</string>
 </resources>
